<!--
  ~ This file is part of Hue SmartSwitch
  ~
  ~ Hue SmartSwitch is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<resources>
    <string name="app_name">Hue SmartSwitch</string>

    <string name="switchName">Switch</string>
    <string name="bridge_name">Bridge: {0}</string>
    <string name="ip_address">IP Address: {0}</string>
    <string name="unknown">Unknown</string>
    <string name="not_connected">Not Connected</string>

    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="brightness">Brightness: {0}%</string>
    <string name="lights">Lights</string>
    <string name="groups">Groups</string>
    <string name="no_lights_selected">No Lights Selected</string>
    <string name="multiple_lights_selected">Multiple Lights Selected</string>
    <string name="could_not_connect_light">Could not connect to light</string>
    <string name="could_not_recall_scene">Could not recall scene</string>

    <string name="select_color">Select a Color</string>
    <string name="select_scene">Select a Scene</string>

    <string name="disconnect_from_bridge">Disconnect from Bridge</string>
    <string name="settings">Settings</string>
    <string name="shutdown">Shut Down</string>

    <string name="no_bridges">Not connected to a Hue bridge.  Press the button to search for bridges on the local network.</string>
    <string name="find_bridges">Find Bridges</string>
    <string name="searching_for_bridges">Searching for Hue bridges on the local network…</string>

    <string name="select_bridge">Select Hue bridge to connect to</string>

    <string name="connecting_to_bridge">Connecting to bridge {0} at {1}</string>
    <string name="opening_connection">Opening connection…</string>
    <string name="connected">Successfully connected</string>
    <string name="authenticating">Authenticating…</string>
    <string name="press_link">Please press the link button on your Hue bridge</string>
    <string name="authenticated">Successfully authenticated</string>
    <string name="failed_to_connect">Failed to connect to bridge {0} at {1}.  Ensure the bridge is connected to the network and try again or pick another bridge.</string>
    <string name="error_on_connect">There were errors while attempting to connect to bridge {0} at {1}:\n{2}</string>
    <string name="try_again">Try Again</string>
    <string name="back">Back</string>

    <string name="connection_error_snack">Connection errors occurred.</string>
    <string name="unexpected_disconnect_snack">Bridge disconnected unexpectedly.</string>
    <string name="reconnect">Reconnect</string>

    <string name="screen_orientation">Screen Orientation</string>
    <string-array name="screen_orientations">
        <item>0°</item>
        <item>90°</item>
        <item>180°</item>
        <item>270°</item>
    </string-array>
</resources>
