<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigationHeaderHeight"
    android:paddingStart="@dimen/screenEdgeMarginHorizontal"
    android:paddingEnd="@dimen/screenEdgeMarginHorizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchName"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:id="@+id/switchIpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ip_address"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/bridgeNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:id="@+id/bridgeIpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ip_address"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

</RelativeLayout>