<!--
  ~ This file is part of Hue SmartSwitch
  ~
  ~ Hue SmartSwitch is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/screenEdgeMarginHorizontal_wide"
    android:paddingStart="@dimen/screenEdgeMarginHorizontal_wide"
    tools:context="com.iot.extron.smartlightswitch.bridgefinder.FBridgeFinder">

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="gone">
        <TextView
            android:id="@+id/connectingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting_to_bridge"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_connection"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@android:string/cancel"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectFailedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">
        <TextView
            android:id="@+id/failedToConnectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failed_to_connect"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/failedBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"/>
            <Button
                android:id="@+id/failedTryAgainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/try_again"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectErrorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">
        <TextView
            android:id="@+id/connectionErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_on_connect"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/errorBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"/>
            <Button
                android:id="@+id/errorTryAgainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/try_again"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>