<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/switchWindowBackground"
    tools:context="com.iot.extron.smartlightswitch.lightswitch.FLightswitch">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ProgressBar
            android:id="@+id/responseProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:indeterminateOnly="true"
            android:visibility="gone"
            tools:visibility="visible"
            style="?android:attr/progressBarStyleHorizontal"/>
        <View
            android:id="@+id/lightBackgroundView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/onButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/on"
            android:textColor="@color/colorTextOff"
            android:background="@drawable/light_ripple"
            android:backgroundTint="@color/switchWindowBackground"
            style="@style/SwitchButton"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/screenEdgeMarginHorizontal">
            <LinearLayout
                android:id="@+id/brightnessLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/brightnessTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brightness"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                <SeekBar
                    android:id="@+id/brightnessSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <android.support.v4.widget.Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom">
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/colorFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_color_lens_white_24dp"
                    app:fabSize="mini"
                    app:elevation="4dp"/>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/sceneFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_photo_white_24dp"
                    app:fabSize="mini"
                    app:elevation="4dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/offButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/off"
            style="@style/SwitchButton"/>
        <Button
            android:id="@+id/lightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="[Light]"
            style="?attr/borderlessButtonAccentStyle"/>
    </RelativeLayout>
</LinearLayout>
